# ZGameFrame

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  LICENSE  README.md  package.bat  run_cmake.bat  run_cmake.bat.bak
SandboxApps/: 3DTestWin.cpp  3DTestWin.h  3dObjects.cpp  3dObjects.h  CMakeLists.txt  CMakeLists.txt.bak  ChessWin.cpp  ChessWin.h  FloatLinesWin.cpp  FloatLinesWin.h  ImageSandbox.sln  ImageSandbox.vcxproj  ImageTestWin.cpp  ImageTestWin.h  ImageViewer.cpp  ImageViewer.h  LifeWin.cpp  LifeWin.h  Main_Sandbox.cpp  Main_Sandbox.h  Main_Win64.cpp  Marquee.cpp  Marquee.h  OnePageDocWin.cpp  OnePageDocWin.h  OverlayWin.cpp  OverlayWin.h  ParticleSandbox.cpp  ParticleSandbox.h  ProcessImageWin.cpp  ProcessImageWin.h  SimpleColorWin.cpp  SimpleColorWin.h  TestWin.cpp  TestWin.h  TextTestWin.cpp  TextTestWin.h  ZChess.cpp  ZChess.h  ZChessWin.cpp  (+2 more)
SandboxApps/res/: randpositions.fendb
SandboxApps/res/default_resources/: Blackadder ITC_100.zfont  Blackadder ITC_1000.zfont  Blackadder ITC_12.zfont  Blackadder ITC_150.zfont  Blackadder ITC_18.zfont  Blackadder ITC_20.zfont  Blackadder ITC_250.zfont  Blackadder ITC_30.zfont  Blackadder ITC_40.zfont  Blackadder ITC_60.zfont  Felix Titling_100.zfont  Felix Titling_1000.zfont  Felix Titling_12.zfont  Felix Titling_150.zfont  Felix Titling_18.zfont  Felix Titling_20.zfont  Felix Titling_250.zfont  Felix Titling_30.zfont  Felix Titling_40.zfont  Felix Titling_60.zfont  Framework_100.zfont  Framework_1000.zfont  Framework_12.zfont  Framework_150.zfont  Framework_18.zfont  Framework_20.zfont  Framework_250.zfont  Framework_30.zfont  Framework_40.zfont  Framework_60.zfont  Gadugi_100.zfont  Gadugi_1000.zfont  Gadugi_12.zfont  Gadugi_150.zfont  Gadugi_18.zfont  Gadugi_20.zfont  Gadugi_250.zfont  Gadugi_30.zfont  Gadugi_40.zfont  Gadugi_60.zfont  (+33 more)
SandboxApps/res/docs/: alice_wonderland.txt
SandboxApps/res/shaders/: p_GrassShader.hlsl  p_ScreenSpaceShader.hlsl  v_ScreenSpaceShader.hlsl
ZFramework/: Huffman.cpp  Huffman.h  Resources.cpp  Resources.h  Z3DMath.h  ZAnimObjects.cpp  ZAnimObjects.h  ZAnimator.cpp  ZAnimator.h  ZAssert.h  ZBitBuffer.cpp  ZBitBuffer.h  ZBuffer.cpp  ZBuffer.h  ZColor.h  ZCompression.cpp  ZCompression.h  ZD3D.cpp  ZD3D.h  ZDebug.h  ZDictionary.cpp  ZDictionary.h  ZFloatColorBuffer.cpp  ZFloatColorBuffer.h  ZFont.cpp  ZFont.h  ZFont_16bitwork.cpp  ZFont_16bitwork.h  ZFormattedTextWin.cpp  ZFormattedTextWin.h  ZFramework.natvis  ZGUIElements.cpp  ZGUIElements.h  ZGUIHelpers.cpp  ZGUIHelpers.h  ZGUIStyle.cpp  ZGUIStyle.h  ZGraphicSystem.cpp  ZGraphicSystem.h  ZHuffman.cpp  (+70 more)
ZFramework/default_resources/: Blackadder ITC_100.zfont  Blackadder ITC_1000.zfont  Blackadder ITC_12.zfont  Blackadder ITC_150.zfont  Blackadder ITC_18.zfont  Blackadder ITC_20.zfont  Blackadder ITC_250.zfont  Blackadder ITC_30.zfont  Blackadder ITC_40.zfont  Blackadder ITC_60.zfont  Soft Elegance_100.zfont  Soft Elegance_1000.zfont  Soft Elegance_12.zfont  Soft Elegance_150.zfont  Soft Elegance_18.zfont  Soft Elegance_20.zfont  Soft Elegance_250.zfont  Soft Elegance_30.zfont  Soft Elegance_40.zfont  Soft Elegance_60.zfont  Wingdings 3_100.zfont  Wingdings 3_12.zfont  Wingdings 3_150.zfont  Wingdings 3_18.zfont  Wingdings 3_20.zfont  Wingdings 3_30.zfont  Wingdings 3_40.zfont  Wingdings 3_48.zfont  Wingdings 3_60.zfont  sizable_btn_down.psd  sizable_btn_up.psd  slider_thumb.psd
ZFramework/default_resources/shaders/: c_GaussianBlur.hlsl  c_GaussianBlur_Horizontal.hlsl  c_GaussianBlur_Vertical.hlsl  p_ScreenSpaceShader.hlsl  v_ScreenSpaceShader.hlsl
ZFramework/raw_resources/: btnsizable_down_trying_to_add_alpha.psd  dialog_edge.psd  sizable_btn_down.psd
ZImageViewer/: CMakeLists.txt  CMakeLists.txt.bak  ConfirmDeleteDialog.cpp  ConfirmDeleteDialog.h  ImageContest.cpp  ImageContest.h  ImageMeta.cpp  ImageMeta.h  ImageViewer.cpp  ImageViewer.h  Main_Win64.cpp  Main_ZImageViewer.cpp  Main_ZImageViewer.h  README.md  TopWinnersDialog.cpp  TopWinnersDialog.h  WinTopWinners.cpp  WinTopWinners.h  ZIVControlPanel.cpp  ZIVControlPanel.h  ZImageViewer.rc  bumpversion.py  package.bat  resource_win64.h
ZImageViewer/install/: associate.reg.template  install.cfg
